--- a/pages/style2.css
+++ b/pages/style2.css
@@ -62,6 +62,11 @@ nav ul li a:active{
     color: gray;
 
 }
+main{
+    display: flex;
+    flex-direction: column ;
+    flex-grow: 1;
+}
 main H1{
     /* text-align: center; */
     text-decoration:underline;
