--- a/pages/style2.css
+++ b/pages/style2.css
@@ -6,32 +6,20 @@
 *{
     margin: 0;
     padding: 0;
-    font-family: "Lato";
+    font-family: "Lato",sans-serif;
 }
  body{
     margin: 0;
     padding: 0;
-    /* font-family:"Lato", sans-serif; */
     color:white;
-
-    background: url("../images/img1.3.jpg") black;
+    background: url("../images/img1.3.jpg") #1c1c24 no-repeat;
     height: 100vh;
     background-size: cover;
-    background-repeat: no-repeat;
     background-position: 50%;
 } 
-
 #Header{
-    
     display: flex;
     justify-content:center;
-}
-
-nav{
-display: flex;
-flex-direction: column;
-justify-content:center;
-
 }
 nav ul {
     list-style: none;
@@ -41,34 +29,20 @@ nav ul li {
     margin-bottom: 15px;
     text-align: center;
 }
-
-
-
 nav ul li a {
     text-decoration: none;
     font-weight: 900;
     padding: 5px 5px;
     color: white;
-    
-    
-    
 }
 nav ul li a:hover{
-   
     color: black;
-
 }
 nav ul li a:active{
     color: gray;
-
-}
-main{
-    display: flex;
-    flex-direction: column ;
-    flex-grow: 1;
 }
 main H1{
-    /* text-align: center; */
+    
     text-decoration:underline;
     margin-bottom: 20px;
 }
@@ -77,14 +51,11 @@ p{
 }
 section{
     display: flex;
-    
     flex-direction:column;
-   
     align-items: center;
 
     
 }
-
 section article {
     width: 50%;
     border: 3px white solid;
@@ -93,28 +64,17 @@ section article {
     
 }
 footer{
-    position: absolute;
+    position:relative;
+    display: flex;
+    justify-content:space-evenly;
     text-align: center;
     bottom: 0;
     border-top:3px solid white ;
     width: 100%;
 }
-
-
-
-
-
-
-
-
-
 /* ------------ */
 @media  screen and (min-width: 1024px){
-    *{
-        margin: 0;
-        padding: 0;
-        font-family: "Lato";
-    }
+    
     #Header{
         display: flex;
         flex-direction: row;
@@ -131,8 +91,6 @@ footer{
         
     }
     section article {
-        flex-direction: column;
-        
         margin: 0 20PX 0 20PX;
         width: 30%;
         
@@ -144,15 +102,7 @@ footer{
     nav ul li a{
         font-size: 1.7rem;
     }
-    
-
-
-
+    footer{
+        position:absolute
+    }
 }
-
-
-
-
-/* table{
-    border-collapse: collapse;
-} */
